--- a/config.yaml
+++ b/config.yaml
@@ -25,3 +25,6 @@ logging: false
 # 归档日志到本地文件
 version: v1.5.2
 # config 文件版本号，debug用
+push:
+  serverChan:
+    key: yourServerChanKey_findItInYourServerChanProfilePage
