--- a/config.yaml
+++ b/config.yaml
@@ -27,4 +27,5 @@ version: v1.5.2
 # config 文件版本号，debug用
 push:
   serverChan:
-    key: yourServerChanKey_findItInYourServerChanProfilePage
+    key:
+    # 你的server酱推送密钥，可以在server酱的后台配置页面看到
